css/zwanzigeins-app.css
:root{
	--button-gradient-top-color: #f4f5f5;
	--button-gradient-bottom-color: #dfdddd;
	--button-gradient-top-active-color: #d9dddd;
	--button-gradient-bottom-color-active: #c6c3c3;
}

html.dark-theme{
	--button-gradient-top-color: var(--default-panel-bg-color);
	--button-gradient-bottom-color: var(--default-panel-bg-color);
	--button-gradient-top-active-color: var(--button-bg-active-color);
	--button-gradient-bottom-active-color: var(--button-bg-active-color);
}

#mentalArithmeticMenu > button {
	margin-top: 1rem;
}

.fromTo:last-child {
	margin-top: 1rem;
}

.fromTo td:last-child {
	width: 100%;
}

.fromTo label {
	margin-right: 0.5rem;
	margin-left: 1.5rem;
}

.fromTo input {
	width: 100%;
}

#startBtnArea, #lastGameTimeWrapper {
	text-align: center;
}

#mentalArithmeticMenu table {
	font-size: 2rem;
}

#mentalArithmeticMenu table tr:not(:first-child) td {
	padding-top: 0.5rem;
}

#arities {
	text-align: left;
}

.numberGame > table{
	flex: 1;
	display: table;
	font-size: 2.5rem;
	text-align: center;
	border-collapse: collapse;   	
}

.numberGame .task,
.numberGame .answer {
	height: 6rem;
	background-color: var(--input-bg-color);
	background-image: none;
}

.numberGame td{
	border-bottom: 1px solid var(--default-border-color);
}

.numberGame tr:last-child td{
	border-bottom: 0;
}

.numberGame.auditive .task {
	display: none;
}

.numberGame .answerWrapper{
    display: none;
}

.numberGame .answer.error{
	background: #b00002;
	color: white;
}

.numberGame.auditive .answerWrapper.auditive{
	display: table-row;
}

.numberGame:not(.auditive) .answerWrapper.simple{
    display: table-row;
}

.numberGame.auditive .answer {
    border-right: 0;	
}

.numberGame.auditive .playAgainBtn {
	display: none;
	width: 33.333333%;
	height: 9rem;
/* 	background: linear-gradient(to bottom, #f4f5f5, #dfdddd); */
	background-size: 48px;
	border-left: 0;
}

.numberGame.auditive .playAgainBtn:before{
	background-image: url(../img/ic_play_arrow_24px.svg);
	background-size: 1em;
}

.numberGame.auditive .playAgainBtn {
	display: table-cell;
}

.numberGame td, .numberGame.auditive #playAgainBtn{
	width: 33.33333%;
	vertical-align: middle;
	text-align: center;
	background-color: var(--button-bg-color);	
	background-image: linear-gradient(to bottom, var(--button-gradient-top-color), var(--button-gradient-bottom-color));
	border-right: 1px solid var(--default-border-color);
	user-select: none;
}

.numberGame td:last-child {
	border-right: 0;
}

.numberGame td.touching, #playAgainBtn.touching {
	background-color: var(--button-bg-active-color);
	background-image: linear-gradient(to bottom, var(--button-gradient-top-active-color), var(--button-gradient-bottom-active-color));
}

#numberDictationGame .answer{
	height: 6rem;
	font-size: 2.5rem;
	display: flex;
	align-items: center;
	justify-content: center;
	background-color: var(--input-bg-color);
}

